--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="..\src\styles\style.css">
+    <link rel="stylesheet" href=".\src\styles\style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -12,7 +12,7 @@
     <nav>
         <div class="profile-section" >
             <div class="profile-img-container">
-                <img src="..\src\img\Default_pfp.png" alt="Profile">
+                <img src=".\src\img\Default_pfp.png" alt="Profile">
             </div>
             <p>Resort Name</p>
         </div>
@@ -42,7 +42,7 @@
         </div>
     </main>
 
-    <script src="..\src\components\script.js"></script>
+    <script src=".\src\components\script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
 </body>
