hover navbar buttons and profile container

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
         <div class="nav-bar text-center" >
             <div class="nav-btn dashboard">
-                <i class="ri-dashboard-fill" style="color: var(--color-palette-light-gold)"></i>
+                <i class="ri-dashboard-fill" ></i>
                 <p>Dashboard</p>
             </div>
             <div class="nav-btn submit">
-                <i class="ri-send-plane-2-fill" style="color: var(--color-palette-light-gold)"></i>
+                <i class="ri-send-plane-2-fill"></i>
                 <p>Submit</p>
             </div>
             <div class="nav-btn track">
-                <i class="ri-file-history-fill" style="color:  var(--color-palette-light-gold)"></i>
+                <i class="ri-file-history-fill"></i>
                 <p>Track</p>
             </div>
             <div class="nav-btn logout">
-                <i class="ri-logout-box-fill" style="color:  var(--color-palette-light-gold)"></i>
+                <i class="ri-logout-box-fill" ></i>
                 <p>Logout</p>
             </div>
         </div>
